# name: TestAttachGroups.test_multiple_documents
  <class 'list'> [
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 'fb085f7f',
          'name': 'hydrogeologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': '7cf872dc',
          'name': 'architects',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'handle': 'kelsey56',
      'id': '3cbb22cc',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': None,
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'da42dca3',
          'name': 'neurosurgeons',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': '09d01419',
          'name': 'optometrists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
        <class 'dict'> {
          'id': 'f60bae36',
          'name': 'haematologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'handle': 'darrellmorris',
      'id': '153ff459',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': None,
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
  ]
---
# name: TestAttachGroups.test_no_groups
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestAttachGroups.test_single_document
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': '7cf872dc',
        'name': 'architects',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    ],
    'handle': 'kelsey56',
    'id': '3cbb22cc',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestAttachPrimaryGroup.test_multiple_documents
  <class 'list'> [
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'bf1b993c',
          'name': 'musicians',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'handle': 'qtaylor',
      'id': '7cf872dc',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': None,
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
    <class 'dict'> {
      'active': True,
      'administrator': False,
      'force_reset': False,
      'groups': <class 'list'> [
        <class 'dict'> {
          'id': 'fb085f7f',
          'name': 'hydrogeologists',
          'permissions': <class 'dict'> {
            'cancel_job': False,
            'create_ref': False,
            'create_sample': False,
            'modify_hmm': False,
            'modify_subtraction': False,
            'remove_file': False,
            'remove_job': False,
            'upload_file': False,
          },
        },
      ],
      'handle': 'fcarpenter',
      'id': '3cbb22cc',
      'invalidate_sessions': False,
      'last_password_change': <class 'datetime'>,
      'password': <class 'bytes'>,
      'primary_group': None,
      'settings': <class 'dict'> {
        'quick_analyze_workflow': 'pathoscope_bowtie',
        'show_ids': True,
        'show_versions': True,
        'skip_quick_analyze_dialog': True,
      },
    },
  ]
---
# name: TestAttachPrimaryGroup.test_no_primary_group
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'leeashley',
    'id': 'bf1b993c',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestAttachPrimaryGroup.test_single_document
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
      },
    ],
    'handle': 'laura56',
    'id': 'fb085f7f',
    'invalidate_sessions': False,
    'last_password_change': <class 'datetime'>,
    'password': <class 'bytes'>,
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
